Fix render issue on iPhone 11

--- a/css/style.css
+++ b/css/style.css
@@ -841,4 +841,14 @@ main {
   .container {
     width: 100%;
   }
+
+  .project-img {
+    max-height: 10rem;
+  }
+
+  .hero-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
